# hacktofuture4

./: -  .dockerignore  .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  COMPLETION_CHECKLIST.md  CONTEXT.txt  DEPLOY.md  DID HE WARRIORS  Dockerfile  Dockerfile.enforcement-bridge  Dockerfile.tetragon-processor  IMPLEMENTATION_SUMMARY.txt  Makefile  OLLAMA_SETUP.md  PIPELINE_IMPLEMENTATION.md  QUICK_START.txt  README.md  README_PIPELINE.md  STATUS.md  TO-DO.md  WORK_SUMMARY.md  api_reference.md  app.py  demo.sh  deployment.yaml  devilsden (1).pptx  direct_workflow.html  docker-compose-blue.yml  docker-compose-red.yml  docker-compose.yml  enforcement_bridge.py  fix_quotes.py  fix_slack.patch  fluent-bit.conf  gateway.js  index.html  (+26 more)
agent-service/: .env  Dockerfile  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements.txt  scratch_nv.py  server.js
agent-service/data/: incident.memory.js
agent-service/routes/: agent.routes.js
agent-service/services/: advanced-heal.service.js  decision.service.js  kubernetes.service.js  logAnalyzer.js  ml-insight.service.js  monitor.service.js  rca.service.js  remediation.service.js  scale-heal.service.js
agent-service/src/: __init__.py  config.py  django_client.py  graph.py  main.py  schemas.py
agent-service/tests/: __init__.py  test_action_orchestrator.py  test_agent_health.py  test_agents.py  test_django_client.py  test_fetcher.py  test_graph.py  test_mapper.py  test_pipeline_router.py
agent-service/utils/: groqClient.js  http.js
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.tests  Makefile  README.md  ai_processor.py  app.py  config.py  conftest.py  database.py  db.py  entrypoint.sh  events_fallback.json  firebase_key.json  go.mod  go.sum  init_db.py  main.py  models.py  news_fetcher.py  observability.py  pyproject.toml  requirements.txt  sample_code_generator.py  zip_builder.py
backend/accounts/: apps.py  models.py  serializers.py  urls.py  views.py
backend/agents/: __init__.py  diagnosis_agent.py  executor_agent.py  fixer_agent.py  live_monitor_agent.py  monitor_agent.py  orchestrator.py  phase3_orchestrator.py  planner.py  tester.py  vector_store.py
backend/app/: config.py  main.py  models.py
backend/backend/: __init__.py  celery.py  settings.py  urls.py
backend/chat/: apps.py  models.py  urls.py  views.py
backend/classification/: __init__.py  failure_classifier.py
backend/clustering/: embedder.py
backend/collectors/: __init__.py  k8s_events_collector.py  loki_collector.py  prometheus_collector.py  tempo_collector.py
backend/core/: admin.py  exceptions.py  models.py  pagination.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/data/: sample_app.py  scenarios.json
backend/db/: schema.sql  seed_vault.py
backend/diagnosis/: __init__.py  diagnose_agent.py  feature_extractor.py  llm_fallback.py  rule_engine.py
backend/events/: apps.py  filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/executor/: __init__.py  action_runner.py  docker_runner.py  vcluster_manager.py
backend/fault_injection/: __init__.py  fault_injector.py
backend/governance/: __init__.py  token_governor.py
backend/guardian/: risk_evaluator.py
backend/incident/: INCIDENT_ASSEMBLER.md  __init__.py  incident_assembler.py  snapshot_builder.py  state_machine.py  store.py
backend/ingestion/: github_scraper.py  normalizer.py  web_scraper.py
backend/insights/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/integrations/: apps.py  models.py  serializers.py  urls.py  views.py
backend/k8s/: backend-deployment.yaml  backend-rbac.yaml
backend/learning/: __init__.py
backend/llm/: __init__.py
backend/memory/: __init__.py  incident_memory_store.py  outcome_ranker.py
backend/models/: __init__.py  approval_request.py  enums.py  fix_record.py  pipeline_event.py  schemas.py
backend/notifications/: __init__.py  notifier.py
backend/pipeline/: orchestrator.py
backend/planner/: __init__.py  plan_simulator.py  planner_agent.py  planner_ai.py  policy_ranker.py
backend/processing/: apps.py  models.py  serializers.py  urls.py  views.py
backend/queries/: admin.py  models.py  serializers.py  urls.py  views.py
backend/realtime/: __init__.py  broadcaster.py  hub.py
backend/routers/: __init__.py  agents.py  cost.py  fault_injection.py  health.py  incidents.py  memory.py  scenarios.py  websocket.py
backend/routes/: analyze.py  approvals.py  dashboard.py  recovery.py  session_routes.py  telemetry.py  webhook.py
backend/security/: apps.py  models.py  urls.py  views.py
backend/services/: firestore_service.py  frequency_service.py  github_service.py  ip_service.py  keystroke_service.py  risk_engine.py  websocket_manager.py
backend/signal_intelligence/: __init__.py  log_pattern_extractor.py  metric_feature_builder.py  trace_dependency_mapper.py
backend/sync/: apps.py  models.py  tasks.py  urls.py  views.py
backend/tests/: conftest.py  test_approvals.py  test_chat_iris_input.py  test_chat_orchestration.py  test_chat_stream.py  test_diagnosis_agents.py  test_e2e_ingest_chat_approve.py  test_health.py  test_incident_assembler_demo.py  test_ingestion.py  test_live_monitor_agent_enrichment.py  test_llm_fallback.py  test_loki_collector.py  test_memory_dedup.py  test_models_contract.py  test_phase3_orchestration.py  test_phase4_planner_orchestration.py  test_planner_agents.py  test_reasoning_tuning.py  test_retrieval_execution_groq.py  test_risk_evaluator.py  test_tool_registry_adapters.py
backend/tickets/: apps.py  filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/verifier/: __init__.py  recovery_checker.py
mcp-servers/hubspot/: pyproject.toml
mcp-servers/jira/: pyproject.toml
mcp-servers/slack/: pyproject.toml
server/: .env.example  auth.py  config.py  main.py  messages.py  package-lock.json  package.json  pyproject.toml  seed.js  server.js  state_store.py  telegram_notifier.py  webhook_manager.py
server/agent/: __init__.py  cd_monitor_graph.py  graph.py  (+3 more)
(+1149 files in other folders)
