[project]
name = "voice-to-action-workspace"
version = "0.1.0"
description = "Voice-to-Action Hackathon Workspace"
requires-python = ">=3.11"
dependencies = [
    "black>=24.1.1",
    "isort>=5.13.2",
    "flake8>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-django>=4.7.0",
    "pytest-asyncio>=0.23.2",
    "pytest-httpx>=0.30.0",
    "pytest-cov>=4.1.0",
    "coverage>=7.3.2",
    "factory-boy>=3.3.0",
]

[tool.uv.workspace]
members = [
    "backend",
    "agent-service",
    "mcp-servers/*",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
