[project]
name = "voice-to-action-agent"
version = "0.1.0"
description = "FastAPI + LangGraph agent service for Voice-to-Action"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "langgraph>=0.0.20",
    "langchain-openai>=0.0.5",
    "langchain>=0.1.0",
    "sse-starlette>=1.8.1",
    "httpx>=0.25.2",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.2",
    "black>=24.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.2",
    "pytest-httpx>=0.28.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
asyncio_mode = "auto"
