[project]
name = "voice-to-action-backend"
version = "0.1.0"
description = "Django backend for Voice-to-Action hackathon project"
requires-python = ">=3.11"

dependencies = [
    "django>=4.2,<5.0",
    "djangorestframework>=3.14.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.1",
    "django-cors-headers>=4.3.1",
    "python-dotenv>=1.0.0",
    "celery>=5.3.4",
    "black>=24.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-django>=4.7.0",
    "coverage>=7.3.2",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py311"
