[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "cryptography>=46.0.0",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "langchain>=1.2.12",
    "langchain-openai>=0.3.0",
    "langchain-core>=1.2.18",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-telegram-bot>=22.7",
    "python-dotenv>=1.2.2",
    "sse-starlette>=3.3.2",
    "uvicorn[standard]>=0.41.0",
    "boto3>=1.35.0",
    "azure-identity>=1.19.0",
    "azure-monitor-query>=1.4.0",
    "google-cloud-logging>=3.11.0",
    "google-cloud-monitoring>=2.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "rsi*", "memory*"]
